Enabled Authorization Rules for Blog Detail Component as well as fixed a bug with the image being too large when in the edit blog mode

--- a/src/style/blog-form.scss
+++ b/src/style/blog-form.scss
@@ -10,6 +10,9 @@
 
   .image-uploaders {
     @include base-grid();
-    grid-template-columns: 200px;
+    grid-template-columns: 200px;    
+    img {
+      max-width: 816px;
+    }
   }
 }
